refactor: handle displayBoard in frontend.js

--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Othello</title>
+    <script src="frontend.js"></script>
     <script src="wasm_exec.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
